# datafusion_stuff

datafusion-demo/: README.md  generate_large_pokemon.py  main.py  pyproject.toml  utils.py
modern_lakehouse_datafusion/: .gitignore  README.md  datafusion_datalake_demo.ipynb  duckdb_datalake_analysis.py  main.py  pyproject.toml
