[project]
name = "datafusion-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datafusion>=50.1.0",
    "pyarrow>=22.0.0",
    "pyiceberg-core>=0.7.0",
    "pyiceberg[sql-sqlite]>=0.10.0",
    "requests>=2.32.5",
]
